[tool.poetry]
name = "uottawa_enlg"
version = "0.0.1"
description = "Scripts UOttawa talk on extended nonlocal games"
authors = [
    "Vincent Russo <vincentrusso1@gmail.com>"
]
maintainers = [
    "Vincent Russo <vincentrusso1@gmail.com>"
]
readme = "README.md"
homepage = "https://vprusso.github.io/"
repository = "https://github.com/vprusso/uottawa_enlg"
keywords = ["quantum information", "quantum computing", "extended nonlocal games"]


[tool.poetry.dependencies]
python = "3.7.*"
cvx = "*"
cvxpy = "*"
numpy = "1.19.0"
scipy = "*"
toqito = "*"
scs = "^2.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
